--- a/Lab6_CarlosRomero/nbproject/project.properties
+++ b/Lab6_CarlosRomero/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=lab6_carlosromero.Lab6_CarlosRomero
+main.class=lab6_carlosromero.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
